--- a/src/App.scss
+++ b/src/App.scss
@@ -2,13 +2,21 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+
   /* overflow-x: hidden; */
+}
+body{
+  background-color: #1f1f1f;
+
+
+
 }
 .App {
   min-height: 100%;
   max-height: max-content;
-  font-size: 34px;
-  background-color: #000000ef;
+  font-size: clamp(16px, 2vw, 32px);
+  background-color: #1f1f1f;
   min-width: 100%;
   /* background-image: url("./assets/mainbackground.png"); */
   background-repeat: repeat-y;
@@ -20,6 +28,7 @@ section {
   /* border: none; */
   display: flex;
   padding: 0.1%;
+  overflow-x: hidden;
 
   justify-content: center;
   align-items: center;
@@ -27,7 +36,7 @@ section {
   flex-direction: column;
   gap: 0;
   animation: fadeIn 3.5s;
-  border-bottom: 1px solid white;
+  // border-bottom: 1px solid white;
   /* box-shadow: 0px 10px 100px rgba(61, 59, 59, 0.2); */
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.242); */
 }
@@ -47,11 +56,11 @@ strong {
 }
 @media (max-width: 1070px) {
   .App {
-    font-size: 32px;
+    // font-size: 32px;
   }
 }
 @media (max-width: 768px) {
   .App {
-    font-size: 18px;
+    // font-size: 18px;
   }
 }
