--- a/src/components/module-css/Baner.module.scss
+++ b/src/components/module-css/Baner.module.scss
@@ -1,41 +1,132 @@
-.banerSection{
-     
-      background-image: url('../../assets/baner.png');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      // background-color: rgba(0, 0, 0, 0.516);
-      height: 95vh;
-}
-.text{
-      margin-top: 5%;
-}
-.info{
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      justify-content: center;
-      align-items: center;
-      background-color: rgba(0, 0, 0, 0.516);
-      width: 100%;
-      height: 100%;
-
-}
-.info > a{
-      border: 2px solid rgba(255, 255, 255, 0.943);
-      text-decoration: none;
-      color:aliceblue;
-      background-color: rgba(255, 0, 0, 0.532);
-      padding:2.5%;
-      margin:5%;
-      border-radius: 25px;
-      font-size: larger;
-      box-shadow: 10px 10px 100px black;
+.banerSection {
+  position: relative;
+  overflow: hidden;
+  height: 95vh;
+  background-color: #1f1f1f;
+  display: flex;
+  // align-items: center;
+  // justify-content: center;
+  gap:0;
+  opacity: 0; /* Ustawienie początkowej przezroczystości */
+  transform: translateY(100vh); /* Ustawienie początkowej pozycji poza ekranem */
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
 }
 
-@media (max-width:768px) {
-      .info{
-            font-size: 24px;
-      }
+.slideIn {
+  opacity: 1;
+  transform: translateY(0); /* Docelowa pozycja */
+}
 
+.fadeIn {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fadeOut {
+  opacity: 0;
+  transform: scale(1.05);
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.banerImage {
+  background-color: #1f1f1f;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+  transition: opacity 1s ease-in-out;
+}
+
+.info {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0);
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  transition: opacity 1s ease-in-out;
+}
+
+.text {
+  box-shadow: 10px 10px 40px black;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding:20px;
+  border-radius: 30px;
+  margin-top: 5%;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.info > a {
+  border: 2px solid rgba(255, 255, 255, 0.943);
+  text-decoration: none;
+  color: aliceblue;
+  background-color: #E3000F;
+  padding: 1.5%;
+  margin: 2%;
+  border-radius: 15px;
+  box-shadow: 10px 10px 100px black;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.header {
+  overflow: hidden;
+  animation: headerAnim 15s infinite;
+  background-color: rgba(0, 0, 0, 0.409);
+  width:100%;
+  height: 10%;
+  text-align: center;
+  position: relative;
+  // display: flex;
+  // flex-direction: column;
+  // text-align: center;
+  // justify-content: flex-start;
+  // align-items: center;
+  z-index: 2;
+}
+.header > h1 {
+  font-size:larger;
+  transition: color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+  border-top:1px solid white;
+  border-bottom:1px solid white;
+  color:white;
+  background-color: #E3000F;
+  padding:5px;
+  // border-radius: 30px;
+  // box-shadow: 10px 10px 30px black;
+  align-items: flex-start;
+  // margin-bottom:30%;
+}
+.header >h1:hover{
+  color:red;
+  background-color: white;
+}
+// @keyframes headerAnim{
+//   0%{
+//     transform: translateY(-50px);
+//   }
+//   50%{
+//     transform: translateY(0)
+//   }
+//   100%{
+//     transform: translateZ(-50px)
+//   }
+// }
+.aButton:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 0px 30px rgba(255, 0, 0, 0.8);
+}
+
+@media (max-width: 768px) {
+  .info {
+    /* Dodatkowe style dla mniejszych ekranów, jeśli potrzebne */
+  }
 }
