--- a/src/components/module-css/Card.module.css
+++ b/src/components/module-css/Card.module.css
@@ -12,20 +12,19 @@
   transition: background-image 1s ease-in-out;
 }
 .Cards {
-  position: relative;
+  /* position: relative; */
   z-index: 2;
-  min-width: 100%;
   display: flex;
   justify-content: center;
-  gap: 10%;
-  margin: 10%;
+  /* gap: 10%; */
+  /* margin: 10%; */
   align-items: center;
 }
 .Card {
+  font-size: clamp(20px, 2vw, 28px);
   border-radius: 10%;
   margin: 5%;
   border: 1px double rgba(255, 255, 255, 0.73);
-  font-size: 30px;
   background-color: #1f1f1fbd;
   box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.616);
   color: white;
@@ -34,9 +33,11 @@
   align-items: center;
   justify-content: center;
   transition: scale 1s ease-in-out;
-  width: 90%;
-  min-height: 70vh;
   max-width: 500px;
+  min-height: 400px;
+  /* width: 90%; */
+  /* min-height: 70vh; */
+  /* max-width: 500px; */
   /* max-height: 300px; */
 }
 .background {
@@ -89,25 +90,24 @@
   /* z-index: 1; Ensure the cards are above the background images */
 
 /* .Card {
-  transform: scale(1);
-  transition: transform 0.5s ease-out;
-  border-radius: 10%;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  max-width: 60%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: contain;
-  border: 1px double rgba(255, 255, 255, 0.73);
-  font-size: 22px;
-  background-color: #1f1f1ff2;
-  box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.616);
-  margin: 10%;
-} */
+    transform: scale(1);
+    transition: transform 0.5s ease-out;
+    border-radius: 10%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    max-width: 60%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border: 1px double rgba(255, 255, 255, 0.73);
+    background-color: #1f1f1ff2;
+    box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.616);
+    margin: 10%;
+  } */
 
 .Card:hover {
   transform: scale(1.1);
@@ -154,7 +154,6 @@ path {
     gap: 50px;
   }
   .Card {
-    font-size: 22px;
     min-height: 400px;
   }
   .Cards > a {
