--- a/src/components/module-css/Home.module.css
+++ b/src/components/module-css/Home.module.css
@@ -1,7 +1,12 @@
 .home > :nth-child(4) {
   flex-direction: row-reverse;
-  background-color: #00000096;
+  background-color: #1f1f1f;
   /* box-shadow: 10px 10px 40px black; */
+}
+
+.home p {
+  /* background-color: #00000096; */
+  text-align: center;
 }
 .home > :nth-child(4) img {
   /* width: 10px; */
