--- a/src/components/module-css/Socials.module.css
+++ b/src/components/module-css/Socials.module.css
@@ -1,46 +1,45 @@
-.socialsDiv {
-  display: flex;
+.socialLinks {
   min-width: 100%;
-  min-height: 250px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px;
+  color: white;
 }
-.buttonLink {
-  border: none;
-  width: 100%;
-  min-height: 100%;
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-}
-.socialsDiv > a {
-  display: inline-block;
-  text-decoration: none;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  min-height: 100%;
-  background: none;
-}
-#fb {
-  /* background-color: rgb(71, 71, 167); */
 
-  background-image: url("../../assets/fb.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+.tile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 15px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-decoration: none;
+  color: white;
+  margin: 10px;
 }
-#ig {
-  background-image: url("../../assets/ig.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+
+.tile:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
-@media (max-width: 1000px) {
-  .socialsDiv {
-    min-height: px;
+
+.facebook {
+  background-color: #3b5998;
+}
+
+.instagram {
+  background-color: #e1306c;
+}
+
+.phone {
+  background-color: #25d366;
+}
+
+@media (max-width: 768px) {
+  .social-links {
     flex-direction: column;
-  }
-  .buttonLink {
-    min-width: 100%;
-    min-height: 200px;
   }
 }
