--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@ body{
 .App {
   min-height: 100%;
   max-height: max-content;
-  font-size: clamp(16px, 2vw, 32px);
+  // font-size: clamp(16px, 2vw, 32px);
   background-color: #1f1f1f;
   min-width: 100%;
   /* background-image: url("./assets/mainbackground.png"); */
@@ -23,26 +23,8 @@ body{
   box-sizing: border-box;
   /* overflow-x: hidden; */
 }
-section {
-  min-width: 100%;
-  /* border: none; */
-  display: flex;
-  padding: 0.1%;
-  overflow-x: hidden;
 
-  justify-content: center;
-  align-items: center;
-  color: white;
-  flex-direction: column;
-  gap: 0;
-  animation: fadeIn 3.5s;
-  // border-bottom: 1px solid white;
-  /* box-shadow: 0px 10px 100px rgba(61, 59, 59, 0.2); */
-  /* border-bottom: 1px solid rgba(255, 255, 255, 0.242); */
-}
-section:last-child {
-  padding: 0;
-}
+
 strong {
   color: red;
 }
