--- a/src/components/module-css/Home.module.css
+++ b/src/components/module-css/Home.module.css
@@ -3,7 +3,9 @@
   background-color: #1f1f1f;
   /* box-shadow: 10px 10px 40px black; */
 }
-
+.home {
+  overflow: hidden;
+}
 .home p {
   /* background-color: #00000096; */
   text-align: center;
