--- a/src/components/rebuild/module-css/HeroSection.module.css
+++ b/src/components/rebuild/module-css/HeroSection.module.css
@@ -1,5 +1,7 @@
 /* Styling for the Hero Section */
 .hero {
+  scroll-behavior: smooth;
+
   position: relative;
   display: flex;
   justify-content: center;
@@ -36,8 +38,11 @@
   max-width: 90%;
   padding: 2rem;
   animation: fadeInUp 1.2s ease-out; /* Fade-in animation */
+  text-decoration: none;
 }
-
+.heroContent a {
+  text-decoration: none;
+}
 /* Title Styling */
 .title {
   font-size: 4rem;
@@ -54,7 +59,7 @@
 .ctaButton {
   padding: 1rem 3rem;
   font-size: 1.4rem;
-  background-color: #ff7f50;
+  background-color: #e3000f;
   color: white;
   text-transform: uppercase;
   border: none;
@@ -66,7 +71,7 @@
 
 /* Button Hover Effect */
 .ctaButton:hover {
-  background-color: #ff4500;
+  background-color: #e3000f;
   transform: translateY(-3px); /* Adds a lifting effect */
   box-shadow: 0px 12px 20px rgba(0, 0, 0, 0.5);
 }
