--- a/src/components/rebuild/module-css/WhyChooseUs.module.css
+++ b/src/components/rebuild/module-css/WhyChooseUs.module.css
@@ -1,6 +1,6 @@
 .whyChooseUs {
   padding: 3rem;
-  background-color: #171717;
+  background-color: #1f1f1f;
   text-align: center;
   border-radius: 12px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
@@ -39,7 +39,7 @@
 
 .icon {
   font-size: 3rem;
-  color: #ff7f50;
+  color: #e3000f;
   margin-bottom: 1rem;
 }
 
@@ -52,7 +52,7 @@ h3 {
 }
 
 .feature:hover h3 {
-  color: #ff7f50;
+  color: #e3000f;
 }
 
 /* Animacja wchodzenia sekcji */
