--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,9 @@ body{
   box-sizing: border-box;
   /* overflow-x: hidden; */
 }
-
+html {
+  scroll-behavior: smooth;
+}
 
 strong {
   color: red;
