--- a/src/components/rebuild/module-css/ContactSection.module.css
+++ b/src/components/rebuild/module-css/ContactSection.module.css
@@ -30,7 +30,7 @@
 
 .icon {
   margin-right: 0.5rem;
-  color: #ff7f50;
+  color: #e3000f;
   font-size: 1.5rem;
 }
 
@@ -60,7 +60,7 @@
 
 .button {
   padding: 1rem;
-  background-color: #ff7f50;
+  background-color: #a1000b;
   color: white;
   border: none;
   cursor: pointer;
@@ -73,7 +73,7 @@
 }
 
 .button:hover {
-  background-color: #ff4500;
+  background-color: #e3000f;
   transform: translateY(-3px);
 }
 
@@ -82,7 +82,12 @@
   text-align: center;
   font-size: 1.2rem;
 }
-
+.details a {
+  text-decoration: none;
+  list-style: none;
+  color: aliceblue;
+  cursor: pointer;
+}
 .details p {
   margin: 0.5rem 0;
   display: flex;
