--- a/src/components/rebuild/module-css/FAQSection.module.css
+++ b/src/components/rebuild/module-css/FAQSection.module.css
@@ -1,6 +1,6 @@
 .faqSection {
   padding: 3rem;
-  background-color: #1f1f1f;
+  background-color: #171717;
   border-radius: 12px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
   animation: fadeInUp 1.2s ease-out;
@@ -48,7 +48,7 @@
 
 .icon {
   font-size: 2rem;
-  color: #ff7f50;
+  color: #e3000f;
   margin-right: 1rem;
 }
 
