--- a/src/components/rebuild/module-css/TechnologySection.module.css
+++ b/src/components/rebuild/module-css/TechnologySection.module.css
@@ -1,6 +1,6 @@
 .technologySection {
   padding: 3rem;
-  background-color: #1f1f1f;
+  background-color: #171717;
   border-radius: 12px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
   animation: fadeInUp 1.2s ease-out;
@@ -34,7 +34,7 @@
   align-items: center;
 }
 
-.video {
+.image {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -45,7 +45,7 @@
 
 .icon {
   font-size: 3rem;
-  color: #ff7f50;
+  color: #e3000f;
   margin-bottom: 1rem;
   text-align: center;
   display: block;
@@ -76,7 +76,14 @@
 }
 
 /* Responsywność */
-
+@media (min-width: 1024px) {
+  .content {
+    justify-content: center;
+  }
+  .content > .text {
+    max-width: 40%;
+  }
+}
 /* Tablety */
 @media (max-width: 1024px) {
   .content {
