--- a/src/components/rebuild/module-css/WhyChooseWood.module.css
+++ b/src/components/rebuild/module-css/WhyChooseWood.module.css
@@ -2,6 +2,7 @@
   padding: 5rem 5rem;
   border-radius: 12px;
   overflow: hidden;
+  scroll-behavior: smooth;
 }
 
 .content {
@@ -65,7 +66,7 @@
 
 .icon {
   font-size: 2rem;
-  color: #ff7f50;
+  color: #e3000f;
 }
 
 .image {
